# OpenSSL-Symmetric-Cipher-Benchmark-Tool

./: .gitignore  CMakeLists.txt  README.md
include/: crypto_utils.hpp
results/: benchmark_results.csv  plot_results.py
src/: bench.cpp  crypto_utils.cpp
